@@ -5,6 +5,7 @@ to Subversion revision numbers (rXXXXX).
 WinMerge 2.7.7.4
   Detect (and read/write) UTF-8 files without BOM (#1879271)
   Tell user that file is not a conflict file (#1880423)
+  Allow opening conflict file from command line (#1880857)
   Translation updates:
   - Croatian (r4952)
   - Japanese (r4962)
